--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/hdngr/treehouse-gulp-course",
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
     "http-server": "^0.11.1"
