--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
